--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,3 +8,18 @@ body,
   margin: 0;
   padding: 0;
 }
+::-webkit-scrollbar {
+  width: 5px; /* 滚动条整体宽度 */
+  height: 5px; /* 对于垂直滚动条的高度 */
+}
+::-webkit-scrollbar-thumb {
+  background-color: #b9bac482; /* 滚动滑块的颜色 */
+  border-radius: 5px; /* 滚动滑块圆角 */
+}
+::-webkit-scrollbar-track {
+  background-color: transparent; /* 滚动轨道背景颜色 */
+  border-radius: 5px; /* 轨道圆角 */
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #999aa378; /* 鼠标悬停在滚动滑块时的颜色 */
+}
