--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,17 +9,20 @@ body,
   padding: 0;
 }
 ::-webkit-scrollbar {
-  width: 5px; /* 滚动条整体宽度 */
-  height: 5px; /* 对于垂直滚动条的高度 */
-}
-::-webkit-scrollbar-thumb {
-  background-color: #b9bac482; /* 滚动滑块的颜色 */
-  border-radius: 5px; /* 滚动滑块圆角 */
-}
-::-webkit-scrollbar-track {
-  background-color: transparent; /* 滚动轨道背景颜色 */
-  border-radius: 5px; /* 轨道圆角 */
+    width: 10px;
+    height: 10px;
+    border-radius: 4px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #999aa378; /* 鼠标悬停在滚动滑块时的颜色 */
+    background: #86909c;
+}
+::-webkit-scrollbar-thumb {
+    background: #c9cdd4;
+    border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(134, 134, 140, 0.471)
+}
+::-webkit-scrollbar-track {
+    background: #e5e6eb;
 }
