--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,7 +4,8 @@
 html,
 body,
 #app {
-  width:100%;height: 100%;
+  width:100vw;height: 100vh;
+  overflow: hidden;
   margin: 0;
   padding: 0;
 }
@@ -25,4 +26,5 @@ body,
 }
 ::-webkit-scrollbar-track {
     background: #e5e6eb;
+    border-radius: 4px;
 }
