--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,6 @@
+@import url("./fonts.css");
+@import url("./animations.css");
+@import url("./scrollbar.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,23 +11,5 @@ body,
   overflow: auto;
   margin: 0;
   padding: 0;
-}
-::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-    border-radius: 4px;
-}
-::-webkit-scrollbar-thumb:hover {
-    background: #86909c;
-}
-::-webkit-scrollbar-thumb {
-    background: #c9cdd4;
-    border-radius: 4px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(134, 134, 140, 0.471)
-}
-::-webkit-scrollbar-track {
-    background: #e5e6eb;
-    border-radius: 4px;
+  font-family: 'Ubu', 'MiSans';
 }
