--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,16 +1,8 @@
 @font-face {
-  font-family: 'MiSans';
-  font-display: fallback;
-  src: url('/src/assets/font/MiSans-Regular.ttf');
+  font-family: 'albb';
+  font-display: swap;
+  src: url('/src/assets/font/albb.woff2') format('woff2');
 }
-@font-face {
-  font-family: 'Ubu';
-  font-display: fallback;
-  src: url('/src/assets/font/Ubuntu-Regular.ttf');
-}
-.font-Mi {
-  font-family: 'MiSans';
-}
-.font-Ubu {
-  font-family: 'Ubu';
+.font-albb {
+  font-family: 'albb';
 }
