--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'albb';
-  font-display: swap;
-  src: url('/src/assets/font/albb.woff2') format('woff2');
-}
 .font-albb {
-  font-family: 'albb';
+  font-family: 'Alibaba PuHuiTi 3.0 55 Regular';
 }
