--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,7 @@
 @import url("./fonts.css");
 @import url("./animations.css");
 @import url("./scrollbar.css");
+@import url("/fonts/AlibabaPuHuiTi-3-55-Regular 4/result.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,5 +12,5 @@ body,
   overflow: auto;
   margin: 0;
   padding: 0;
-  font-family: 'albb';
+  font-family: 'Alibaba PuHuiTi 3.0 55 Regular';
 }
