--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,7 +1,3 @@
-@import url("./fonts.css");
-@import url("./animations.css");
-@import url("./scrollbar.css");
-@import url("/fonts/AlibabaPuHuiTi-3-55-Regular/result.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,5 +8,8 @@ body,
   overflow: auto;
   margin: 0;
   padding: 0;
+  font-family: 'Alibaba PuHuiTi 3.0 55 Regular';
+}
+.font-albb {
   font-family: 'Alibaba PuHuiTi 3.0 55 Regular';
 }
