--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,6 +6,7 @@ body,
   overflow: auto;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
   font-family: 'Alibaba PuHuiTi 3.0 55 Regular';
 }
 
